==========================

 * New API for creating FileRef from IOStream.
 * Added support for ID3v2 PCST and WFED frames.
 * Added String::clear().
 * Added alternative functions to XiphComment::removeField().
 * Better handling of duplicate ID3v2 tags in all kinds of files.
 * Better handling of duplicate tags in WAV files.
 * Fixed crash when calling File::properties() after strip().
 * Fixed possible file corruptions when saving ASF files.
 * Fixed updating the comment field of Vorbis comments.
 * Marked ByteVector::null and ByteVector::isNull() deprecated.
 * Marked String::null and ByteVector::isNull() deprecated.
 * Marked XiphComment::removeField() deprecated.
 * Many smaller bug fixes and performance improvements.

TagLib 1.10 (Nov 11, 2015)
==========================

1.10:

 * Added new options to the tagwriter example.
 * Fixed self-assignment operator in some types.
 * Fixed extraction of MP4 tag keys with an empty list.

1.10 BETA:

 * New API for the audio length in milliseconds.
 * Added support for ID3v2 ETCO and SYLT frames.
 * Added support for album artist in PropertyMap API of MP4 files.
 * Added support for embedded frames in ID3v2 CHAP and CTOC frames.
 * Added support for AIFF-C files.
 * Better handling of duplicate ID3v2 tags in MPEG files.
 * Allowed generating taglib.pc on Windows.
 * Added ZLIB_SOURCE build option.
 * Fixed backwards-incompatible change in TagLib::String when constructing UTF16 strings.
 * Fixed crash when parsing certain FLAC files.
 * Fixed crash when encoding empty strings.
 * Fixed saving of certain XM files on OS X.
 * Changed Xiph and APE generic getters to return space-concatenated values.
 * Fixed possible file corruptions when removing tags from WAV files.
 * Added support for MP4 files with 64-bit atoms in certain 64-bit environments.
 * Prevented ID3v2 padding from being too large.
 * Fixed crash when parsing corrupted APE files.
 * Fixed crash when parsing corrupted WAV files.