@@ -5,7 +5,8 @@
  * Added String::clear().
  * Added alternative functions to XiphComment::removeField().
  * Better handling of duplicate ID3v2 tags in all kinds of files.
- * Better handling of duplicate tags in WAV files.
+ * Better handling of duplicate tag chunks in WAV files.
+ * Better handling of duplicate tag chunks in AIFF files.
  * Fixed crash when calling File::properties() after strip().
  * Fixed possible file corruptions when saving ASF files.
  * Fixed updating the comment field of Vorbis comments.
